--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 </div>
                 <div class="col-6 col-md-3 p-2"><img src="images/dogsSection/img3.png" class="img-fluid rounded" alt="">
                 </div>
-                <div class="ol-6 col-md-3 p-2c"><img src="images/dogsSection/img4.png" class="img-fluid rounded" alt="">
+                <div class="ol-6 col-md-3 p-2"><img src="images/dogsSection/img4.png" class="img-fluid rounded" alt="">
                 </div>
             </div>
             <p class="text-secondary">
