--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PawShop</title>
-    <link rel="stylesheet" href="styles/bootstrap/bootstrap.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="stylesheet" href="styles/all.css">
@@ -15,24 +14,28 @@
     <header>
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
-                <a class="navbar-brand" href="index.html"><img src="images/logo/logoWhite.svg" alt=""></a>
-
+                <a class="navbar-brand" href="index.html">
+                    <img src="images/logo/logoWhite.svg" alt="Logo PawShop" class="img-fluid" style="max-height:50px;">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Alternar navegação">
+                    <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Home</a></li>
+                        <li class="nav-item"><a class="nav-link active" href="index.html">Home</a></li>
                         <li class="nav-item"><a class="nav-link" href="#">Adoção</a></li>
                         <li class="nav-item"><a class="nav-link" href="#">Galeria</a></li>
                         <li class="nav-item"><a class="nav-link" href="#">Contatos</a></li>
+                        <li class="nav-item"><a class="nav-link" href="pages/loja.html">Loja</a></li>
                     </ul>
                 </div>
             </div>
         </nav>
     </header>
-
     <main>
         <section class="container-fluid text-center p-0" id="banner">
-            <div id="carouselExampleCaptions" class="carousel slide">
+            <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-indicators">
                     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
                         aria-current="true" aria-label="Slide 1"></button>
@@ -41,63 +44,63 @@
                     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
                         aria-label="Slide 3"></button>
                 </div>
+
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="images/banner/banner.png" class="d-block w-100" alt="...">
+                        <img src="images/banner/banner.png" class="d-block w-100 img-fluid" alt="Banner 1">
                         <div class="carousel-caption d-none d-md-block">
-                            <h5>First slide label</h5>
-                            <p>Some representative placeholder content for the first slide.</p>
+                            <h5>Primeiro Slide</h5>
+                            <p>Conteúdo de exemplo do primeiro slide.</p>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="images/banner/banner2.png" class="d-block w-100" alt="...">
+                        <img src="images/banner/banner2.png" class="d-block w-100 img-fluid" alt="Banner 2">
                         <div class="carousel-caption d-none d-md-block">
-                            <h5>Second slide label</h5>
-                            <p>Some representative placeholder content for the second slide.</p>
+                            <h5>Segundo Slide</h5>
+                            <p>Conteúdo de exemplo do segundo slide.</p>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="images/banner/banner3.png" class="d-block w-100" alt="...">
+                        <img src="images/banner/banner3.png" class="d-block w-100 img-fluid" alt="Banner 3">
                         <div class="carousel-caption d-none d-md-block">
-                            <h5>Third slide label</h5>
-                            <p>Some representative placeholder content for the third slide.</p>
+                            <h5>Terceiro Slide</h5>
+                            <p>Conteúdo de exemplo do terceiro slide.</p>
                         </div>
                     </div>
                 </div>
+
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
                     data-bs-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
+                    <span class="visually-hidden">Anterior</span>
                 </button>
                 <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
                     data-bs-slide="next">
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
+                    <span class="visually-hidden">Próximo</span>
                 </button>
             </div>
         </section>
         <section class="container text-center my-4">
-            <h3 class="text-info" id="text-dog-section">SEU PET PRECISA DE COMIDA? OU DE UNS PETISCOS? VOCÊ ESTÁ NO
-                LUGAR CERTO!</h3>
+            <h3 class="text-info">SEU PET PRECISA DE COMIDA? OU DE UNS PETISCOS? VOCÊ ESTÁ NO LUGAR CERTO!</h3>
             <div class="row justify-content-center my-4">
-                <div class="col-6 col-md-3 p-2"><img src="images/dogsSection/img1.png" class="img-fluid rounded" alt="">
-                </div>
-                <div class="col-6 col-md-3 p-2"><img src="images/dogsSection/img2.png" class="img-fluid rounded" alt="">
-                </div>
-                <div class="col-6 col-md-3 p-2"><img src="images/dogsSection/img3.png" class="img-fluid rounded" alt="">
-                </div>
-                <div class="ol-6 col-md-3 p-2"><img src="images/dogsSection/img4.png" class="img-fluid rounded" alt="">
-                </div>
+                <div class="col-6 col-sm-4 col-md-3 p-2"><img src="images/dogsSection/img1.png"
+                        class="img-fluid rounded shadow" alt=""></div>
+                <div class="col-6 col-sm-4 col-md-3 p-2"><img src="images/dogsSection/img2.png"
+                        class="img-fluid rounded shadow" alt=""></div>
+                <div class="col-6 col-sm-4 col-md-3 p-2"><img src="images/dogsSection/img3.png"
+                        class="img-fluid rounded shadow" alt=""></div>
+                <div class="col-6 col-sm-4 col-md-3 p-2"><img src="images/dogsSection/img4.png"
+                        class="img-fluid rounded shadow" alt=""></div>
             </div>
             <p class="text-secondary">
                 Na nossa empresa, sabemos que seu pet é mais do que apenas um animal de estimação; ele é parte da sua
                 família.
-                Por isso, estamos comprometidos em fornecer os melhores cuidados do mercado, garantindo que seu
-                amiguinho peludo
-                receba toda a atenção, carinho e proteção de que ele precisa.
+                Por isso, estamos comprometidos em fornecer os melhores cuidados do mercado.
             </p>
         </section>
-        <section class="container text-center my-5">
+
+ <section class="container text-center my-5">
             <h3 class="text-warning fw-bold">CATÁLOGO DE PRODUTOS</h3>
             <div class="row g-4 mt-3">
                 <div class="col-md-3">
@@ -235,12 +238,13 @@
             </div>
         </section>
 
+
         <div class="container my-5">
             <div class="row align-items-center">
-                <div class="col-md-6 order-1 order-md-1">
+                <div class="col-12 col-md-6 mb-4 mb-md-0">
                     <h2 class="fw-bold text-center text-md-start">ADOTE UM PET</h2>
                     <p class="text-center text-md-start">
-                        Insira aqui as suas informações para que possamos encontrar um amigo para você!
+                        Insira aqui suas informações para que possamos encontrar um amigo para você!
                     </p>
 
                     <form>
@@ -248,51 +252,26 @@
                             <label for="email" class="form-label">Email</label>
                             <input type="email" class="form-control" id="email" placeholder="Insira seu e-mail">
                         </div>
-
                         <div class="mb-3">
                             <label for="telefone" class="form-label">Telefone</label>
                             <input type="tel" class="form-control" id="telefone" placeholder="Insira seu telefone">
                         </div>
-
                         <div class="form-check mb-3">
                             <input class="form-check-input" type="checkbox" id="notificacoes">
-                            <label class="form-check-label" for="notificacoes">
-                                Aceita receber notificações?
-                            </label>
+                            <label class="form-check-label" for="notificacoes">Aceita receber notificações?</label>
                         </div>
-
                         <button type="submit" class="btn btn-info text-white w-100">Enviar</button>
                     </form>
                 </div>
-                <div class="col-md-6 text-center order-2 order-md-2">
-                    <img src="images/imgBanner.png" alt="Imagem de pet para adoção" class="img-fluid rounded shadow">
+
+                <div class="col-12 col-md-6 text-center">
+                    <img src="images/dogsSection/img1.png" alt="Pet para adoção" class="img-fluid rounded shadow">
                 </div>
             </div>
         </div>
-
-
-        <!-- <section class="container text-center my-5">
-      <h3 class="text-danger-subtle fw-bold">ADOTE UM PET</h3>
-      <p>Insira aqui as suas informações para que possamos encontrar um amigo para você!</p>
-      <form class="col-md-6 mx-auto">
-        <div class="mb-3">
-          <label for="email" class="form-label">Email</label>
-          <input type="email" class="form-control" id="email" placeholder="Insira seu e-mail">
-        </div>
-        <div class="mb-3">
-          <label for="telefone" class="form-label">Telefone</label>
-          <input type="text" class="form-control" id="telefone" placeholder="Insira seu telefone">
-        </div>
-        <div class="form-check mb-3">
-          <input class="form-check-input" type="checkbox" id="aceita">
-          <label class="form-check-label" for="aceita">Aceita receber notificações?</label>
-        </div>
-        <button type="submit" class="btn btn-info">Enviar</button>
-      </form>
-    </section> -->
     </main>
 
-    <footer class="container-fluid py-4 text-center">
+    <footer class="container-fluid py-4 text-center text-white">
         <h6>Todos os direitos reservados © PawShop - 2023</h6>
     </footer>
 
